Import of PLICEASE/Test-Clustericious-Cluster-0.06 from CPAN.
gitpan-cpan-distribution: Test-Clustericious-Cluster
gitpan-cpan-version:      0.06
gitpan-cpan-path:         PLICEASE/Test-Clustericious-Cluster-0.06.tar.gz
gitpan-cpan-author:       PLICEASE
gitpan-cpan-maturity:     released

--- a/dist.ini
+++ b/dist.ini
@@ -3,7 +3,7 @@ author           = Graham Ollis <plicease@cpan.org>
 license          = Perl_5
 copyright_holder = Graham Ollis
 copyright_year   = 2013
-version          = 0.05
+version          = 0.06
 
 [@Author::Plicease]
 release_tests = 1
@@ -30,6 +30,7 @@ remove = Mojo::Base
 remove = base
 remove = Test::Clustericious::Config
 remove = Clustericious::Config::Plugin
+remove = Clustericious::Config::Helpers
 remove = Mojo::Loader
 remove = Carp
 remove = Mojo::UserAgent
@@ -39,9 +40,10 @@ remove = PlugAuth::Lite
 Mojolicious   = 3.86
 File::HomeDir = 0.91
 
-[Author::Plicease::UploadToCPAN]
+[Author::Plicease::Upload]
 
 [ACPS::RPM]
 
 [FakeRelease]
 
+[InsertExample]
