--- a/dist.ini
+++ b/dist.ini
@@ -3,20 +3,11 @@ author           = Graham Ollis <plicease@cpan.org>
 license          = Perl_5
 copyright_holder = Graham Ollis
 copyright_year   = 2013
-version          = 0.10
+version          = 0.11
 
 [@Author::Plicease]
 release_tests = 1
-
-[ReadmeAnyFromPod]
-type     = text
-filename = README
-location = build
-
-[ReadmeAnyFromPod / ReadMePodInRoot]
-type     = pod
-filename = README.pod
-location = root
+travis_status = 1
 
 [RemovePrereqs]
 remove = strict
@@ -39,6 +30,17 @@ remove = PlugAuth::Lite
 [Prereqs]
 Mojolicious   = 3.86
 File::HomeDir = 0.91
+
+[Prereqs / RecommendedPrereqs]
+-relationship  = recommends
+EV             = 0
+
+[Prereqs / SuggestsPrereqs]
+-relationship         = suggests
+Clustericious         = 0.9930
+Clustericious::Config = 0.22
+Clustericious::Log    = 0
+Clustericious::Client = 0
 
 [Author::Plicease::Upload]
 [ACPS::RPM]
