Import of PLICEASE/Test-Clustericious-Cluster-0.12 from CPAN.
gitpan-cpan-distribution: Test-Clustericious-Cluster
gitpan-cpan-version:      0.12
gitpan-cpan-path:         PLICEASE/Test-Clustericious-Cluster-0.12.tar.gz
gitpan-cpan-author:       PLICEASE
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -18,9 +18,9 @@ recommends:
 requires:
   File::HomeDir: 0.91
   Mojolicious: 3.86
-  perl: v5.10.0
+  perl: 5.010
 resources:
   bugtracker: https://github.com/plicease/test-clustericious-cluster/issues
   homepage: http://perl.wdlabs.com/Test-Clustericious-Cluster/
   repository: git://github.com/plicease/test-clustericious-cluster.git
-version: 0.11
+version: 0.12
