--- a/META.yml
+++ b/META.yml
@@ -3,24 +3,24 @@ abstract: 'Test an imaginary beowulf cluster of Clustericious services'
 author:
   - 'Graham Ollis <plicease@cpan.org>'
 build_requires:
-  Test::More: 0
+  Test::More: '0'
 configure_requires:
-  ExtUtils::MakeMaker: 6.30
+  ExtUtils::MakeMaker: '6.30'
 dynamic_config: 0
-generated_by: 'Dist::Zilla version 4.300039, CPAN::Meta::Converter version 2.132830'
+generated_by: 'Dist::Zilla version 5.015, CPAN::Meta::Converter version 2.140640'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
-  version: 1.4
+  version: '1.4'
 name: Test-Clustericious-Cluster
 recommends:
-  EV: 0
+  EV: '0'
 requires:
-  File::HomeDir: 0.91
-  Mojolicious: 3.86
-  perl: 5.010
+  File::HomeDir: '0.91'
+  Mojolicious: '3.86'
+  perl: v5.10.0
 resources:
   bugtracker: https://github.com/plicease/test-clustericious-cluster/issues
   homepage: http://perl.wdlabs.com/Test-Clustericious-Cluster/
   repository: git://github.com/plicease/test-clustericious-cluster.git
-version: 0.12
+version: 0.12_01
