Import of PLICEASE/Test-Clustericious-Cluster-0.12_02 from CPAN.
gitpan-cpan-distribution: Test-Clustericious-Cluster
gitpan-cpan-version:      0.12_02
gitpan-cpan-path:         PLICEASE/Test-Clustericious-Cluster-0.12_02.tar.gz
gitpan-cpan-author:       PLICEASE
gitpan-cpan-maturity:     developer

--- a/META.yml
+++ b/META.yml
@@ -3,6 +3,7 @@ abstract: 'Test an imaginary beowulf cluster of Clustericious services'
 author:
   - 'Graham Ollis <plicease@cpan.org>'
 build_requires:
+  Carp::Always: '0'
   Test::More: '0'
 configure_requires:
   ExtUtils::MakeMaker: '6.30'
@@ -18,9 +19,9 @@ recommends:
 requires:
   File::HomeDir: '0.91'
   Mojolicious: '3.86'
-  perl: v5.10.0
+  perl: '5.010'
 resources:
   bugtracker: https://github.com/plicease/test-clustericious-cluster/issues
   homepage: http://perl.wdlabs.com/Test-Clustericious-Cluster/
   repository: git://github.com/plicease/test-clustericious-cluster.git
-version: 0.12_01
+version: 0.12_02
