--- a/META.yml
+++ b/META.yml
@@ -3,7 +3,6 @@ abstract: 'Test an imaginary beowulf cluster of Clustericious services'
 author:
   - 'Graham Ollis <plicease@cpan.org>'
 build_requires:
-  Carp::Always::Dump: '0'
   Module::Build: '0.3601'
   Test::More: '0'
 configure_requires:
@@ -25,4 +24,4 @@ resources:
   bugtracker: https://github.com/plicease/test-clustericious-cluster/issues
   homepage: http://perl.wdlabs.com/Test-Clustericious-Cluster/
   repository: git://github.com/plicease/test-clustericious-cluster.git
-version: 0.12_07
+version: '0.14'
