--- a/META.yml
+++ b/META.yml
@@ -24,4 +24,4 @@ resources:
   bugtracker: https://github.com/plicease/test-clustericious-cluster/issues
   homepage: http://perl.wdlabs.com/Test-Clustericious-Cluster/
   repository: git://github.com/plicease/test-clustericious-cluster.git
-version: '0.14'
+version: 0.14_01
