--- a/dist.ini
+++ b/dist.ini
@@ -3,7 +3,7 @@ author           = Graham Ollis <plicease@cpan.org>
 license          = Perl_5
 copyright_holder = Graham Ollis
 copyright_year   = 2013
-version          = 0.14
+version          = 0.14_01
 
 [@Author::Plicease]
 release_tests = 1
@@ -26,6 +26,7 @@ remove = Mojo::Loader
 remove = Carp
 remove = Mojo::UserAgent
 remove = PlugAuth::Lite
+remove = IO::Socket::INET
 
 [Prereqs]
 Mojolicious   = 3.86
