--- a/META.yml
+++ b/META.yml
@@ -3,12 +3,15 @@ abstract: 'Test an imaginary beowulf cluster of Clustericious services'
 author:
   - 'Graham Ollis <plicease@cpan.org>'
 build_requires:
-  Module::Build: '0.3601'
-  Test::More: '0'
+  Module::Build: '0.28'
+  Mojolicious::Lite: '0'
+  Test::More: '0.94'
+  perl: '5.010001'
 configure_requires:
-  Module::Build: '0.3601'
+  Module::Build: '0.28'
+  perl: '5.006'
 dynamic_config: 0
-generated_by: 'Dist::Zilla version 5.019, CPAN::Meta::Converter version 2.141170'
+generated_by: 'Dist::Zilla version 5.027, CPAN::Meta::Converter version 2.143240'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -18,10 +21,11 @@ recommends:
   EV: '0'
 requires:
   File::HomeDir: '0.91'
-  Mojolicious: '3.86'
-  perl: v5.10.0
+  Mojo::ByteStream: '0'
+  Mojolicious: '5.0'
+  perl: '5.010001'
 resources:
-  bugtracker: https://github.com/plicease/test-clustericious-cluster/issues
-  homepage: http://perl.wdlabs.com/Test-Clustericious-Cluster/
-  repository: git://github.com/plicease/test-clustericious-cluster.git
-version: '0.16'
+  bugtracker: https://github.com/plicease/Test-Clustericious-Cluster/issues
+  homepage: http://perl.wdlabs.com/Test-Clustericious-Cluster
+  repository: git://github.com/plicease/Test-Clustericious-Cluster.git
+version: '0.17'
