Import of PLICEASE/Test-Clustericious-Cluster-0.18.tar.gz from CPAN.
gitpan-cpan-distribution: Test-Clustericious-Cluster
gitpan-cpan-version:      0.18
gitpan-cpan-path:         PLICEASE/Test-Clustericious-Cluster-0.18.tar.gz
gitpan-cpan-author:       PLICEASE
gitpan-cpan-maturity:     released

--- a/xt/release/release.yml
+++ b/xt/release/release.yml
@@ -9,6 +9,15 @@ pod_spelling_system:
     - urls
     - FooApp
     - BarApp
+    - MyApp
+    - PlugAuth
+    - ua
+    - auth
+    - authz
+    - LDAP
+    - PlugAuthLite
+    - conf
+    - customizable
 
 pod_coverage:
   # format is "Class#method" or "Class", regex allowed
