--- a/dist.ini
+++ b/dist.ini
@@ -3,7 +3,7 @@ author           = Graham Ollis <plicease@cpan.org>
 license          = Perl_5
 copyright_holder = Graham Ollis
 copyright_year   = 2013
-version          = 0.17
+version          = 0.18
 
 [@Author::Plicease]
 release_tests = 1
@@ -27,6 +27,8 @@ remove = Carp
 remove = Mojo::UserAgent
 remove = PlugAuth::Lite
 remove = IO::Socket::INET
+remove = Mojo::ByteStream
+remove = Mojolicious::Lite
 
 [Prereqs]
 Mojolicious   = 5.0
@@ -35,13 +37,11 @@ File::HomeDir = 0.91
 [Prereqs / RecommendedPrereqs]
 -relationship  = recommends
 EV             = 0
+PlugAuth       = 0.28
 
 [Prereqs / SuggestsPrereqs]
 -relationship         = suggests
-Clustericious         = 0.9931
-Clustericious::Config = 0.22
-Clustericious::Log    = 0
-Clustericious::Client = 0
+Clustericious         = 0.9941
 
 [Author::Plicease::Upload]
 [ACPS::RPM]
